--- a/apps/main.css
+++ b/apps/main.css
@@ -87,7 +87,8 @@ footer {
 
 .iframe-container{
   position: relative;
-  width: 100%;
+  max-width: 480px;
+  max-height: 270px;
   padding-bottom: 56.25%; 
   height: 0;
 }
@@ -96,8 +97,8 @@ footer {
   position: absolute;
   top:0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  max-width: 480px;
+  max-height: 270px;
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
