--- a/apps/main.css
+++ b/apps/main.css
@@ -1,5 +1,3 @@
-
-
 header {
   overflow: hidden;
   background-color:white;
@@ -85,20 +83,26 @@ footer {
   color: white;
 }
 
+.responsive {
+  width: 100%;
+  max-width: 480px;
+  height: auto;
+}
+
 .iframe-container{
   position: relative;
-  max-width: 480px;
-  max-height: 270px;
+  max-width: 1px;
+  height: auto;
   padding-bottom: 56.25%; 
-  height: 0;
+
 }
 
 .iframe-container iframe{
   position: absolute;
   top:0;
   left: 0;
-  max-width: 480px;
-  max-height: 270px;
+  max-width: 1px;
+  height: auto;
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
@@ -108,4 +112,3 @@ footer {
     height: auto;
   }
 }
-
