--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ section:after {
 
 /* Style the footer */
 footer {
-  background-color: #331C87;
+  background-color: lightblue;
   margin:0;
   padding:20px;
   width:100%;
