--- a/portfolio/main.css
+++ b/portfolio/main.css
@@ -1,5 +1,59 @@
 
 
+div.imageRight {
+  border: 1px solid #c8ccd1;
+  padding: 3px;
+  float: right;
+  background-color: #f8f9fa;
+  font-size: 94%;
+  text-align: center;
+  overflow: hidden;
+  line-height: 1.4em;
+  padding: 3px;
+  font-size: 94%;
+  margin: 0 0 5px 15px;
+  text-align: left;
+}
+
+div.imageCenter {
+  border: 1px solid #c8ccd1;
+  padding: 3px;
+  float: left;
+  background-color: #f8f9fa;
+  font-size: 94%;
+  text-align: center;
+  overflow: hidden;
+  line-height: 1.4em;
+  padding: 3px;
+  font-size: 94%;
+  margin: 0 0 5px 0 ;
+  text-align: left;
+}
+
+div.imageLeft {
+  border: 1px solid #c8ccd1;
+  padding: 3px;
+  float: left;
+  background-color: #f8f9fa;
+  font-size: 94%;
+  text-align: center;
+  overflow: hidden;
+  line-height: 1.4em;
+  padding: 3px;
+  font-size: 94%;
+  margin: 0 15px 5px 0 ;
+  text-align: left;
+}
+
+div.imageInner {
+  border: 1px solid #c8ccd1;
+  padding: 6px;
+  background-color: #f8f9fa;
+  font-size: 94%;
+  text-align: center;
+  overflow: hidden;
+}
+
 header {
   overflow: hidden;
   background-color:white;
@@ -68,6 +122,7 @@ section:after {
 .main {
   padding-right: 20%;
   padding-left: 20%;
+  text-align:justify
 }
 
 /* Style the footer */
