--- a/portfolio/INTERSTICES_explanation/main.css
+++ b/portfolio/INTERSTICES_explanation/main.css
@@ -158,7 +158,7 @@ footer {
   position: absolute;
   top:0;
   left: 0;
-
+  height: 100%;
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
