--- a/apps/fret/style.css
+++ b/apps/fret/style.css
@@ -15,6 +15,21 @@ body {
   letter-spacing: 0.05em;
 }
 
+form {
+   right: 0;
+   position:absolute;
+}
+
+table {
+  margin-top: 30px;
+  right: 0px;
+  z-index: 1;
+  position:absolute;
+}
+table, td {
+    border: solid black 1px;
+}
+
 #chords1 {
     position: absolute;
     top: 0;
