--- a/apps/ensemble/style.css
+++ b/apps/ensemble/style.css
@@ -23,6 +23,7 @@
   text-align: center;
   width: 67%;
   height: 100vh;
+  max-height: 100vh;
 
 }
 
@@ -94,13 +95,14 @@
 }
 
 .chordcircle_container{
-  position:relative
-  justify-content: center;
-  text-align: center;
+  justify-content: right;
+  max-height: 300px;
 }
 
 #circle24{
-  left:0; top:0; width:100%; height:50%;
+  right:0;
+  width:100%; 
+  max-height: 300px;
   justify-content: center;
 
 }
