--- a/apps/ensemble/style.css
+++ b/apps/ensemble/style.css
@@ -127,7 +127,7 @@ form {
 
 
 
-@media screen and (max-width: 600px){
+@media handheld and (max-width: 600px){
   
   .grid {
     flex-direction: column;  
