--- a/apps/ensemble/style.css
+++ b/apps/ensemble/style.css
@@ -15,7 +15,7 @@
 .navigation {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; 
+  justify-content: space-around; 
   width: 33%;
   height: 100vh;
   min-height: 500px;
