--- a/global_css.css
+++ b/global_css.css
@@ -33,12 +33,9 @@ a {
 
 
 .sub-heading {
-    
     font-size: 48px;
-
     text-align: center;
-
-    font-family: "Glow Better Script";
+/*    font-family: "Glow Better Script";*/
 
 }
 
@@ -77,4 +74,81 @@ a {
 .nav_link:hover {
     font-style: italic;
     
+}
+
+
+
+table.portfolio {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+}
+
+table.portfolio tr {}
+
+td.image {
+    height: 310px;
+    width: 320px;
+
+    background-repeat: no-repeat;
+    background-image: url("assets/youtube-play-button.png");
+
+}
+
+td.image:hover {
+    
+
+}
+
+td.desc {
+
+
+    padding-top: 0.5em;
+    padding-bottom: 0.75em;
+    vertical-align: top;
+    width: 25em;
+
+}
+
+td.odd,
+td.odd p,
+td.odd h3 {
+    padding-left: 0;
+    margin-left: 0;
+    /*text-align:right;*/
+}
+
+td.even,
+td.even p,
+td.even h3 {
+    padding-right: 0.25em;
+    padding-left: 0.25em;
+    margin-right: 0.25em;
+}
+
+table.portfolio td.desc p.desc {
+    font-size: 16px;
+}
+
+table.portfolio td.desc p.desc {
+    letter-spacing: 0.1px;
+    line-height: 1.3em;
+}
+
+table.portfolio h3 {
+    font-size: 20px;
+    letter-spacing: 1px;
+    font-weight: bold;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+table.portfolio p.date {
+    font-size: 13px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+table.portfolio tr.spacer {
+    height: 2em;
 }
