--- a/about/style.css
+++ b/about/style.css
@@ -1,11 +1,11 @@
 
 
-
 footer{
 
     display:flex;
     flex-direction: row;
     justify-content: center;
+    flex-shrink: 0;
 
 }
 
@@ -22,9 +22,6 @@ footer{
 
 
 #about {
-    /*    background-color: rgba(255, 0, 0, 0.4);*/
-
-
     z-index: 4;
     margin-left: auto;
     margin-right: auto;
