Add random image selection for PitchSnap and Ensemble Jammer hovers

--- a/style.css
+++ b/style.css
@@ -401,7 +401,7 @@ footer {
     }
 
     .project-item[href*="ensemble-jammer"]::after {
-        background-image: url('images/ensemblejammer/ensemblejammer-1.png');
+        background-image: url('images/ensemblejammer/Screenshot 2026-02-17 at 6.31.45 PM.png');
     }
 
     .project-item[href*="pitchsnap"]::after {
