--- a/style.css
+++ b/style.css
@@ -214,6 +214,7 @@ footer {
     font-size: 16px;
     text-transform: uppercase;
     letter-spacing: 0.01em;
+    text-align: right;
 }
 
 .project-item.archive .title {
